# marketing-agent

./: .bedrock_agentcore.yaml  .gitignore  CODEX.md  Dockerfile  IMPROVEMENT_PLAN.md  MARKETING_TEAM_USER_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt
.bedrock_agentcore/novaRed_Agent/: dependencies.hash
agent/: agent.py  prompt_builder.py  safety_checks.py
api/: chat_routes.py  kb_routes.py
frontend/: app.js  index.html  kb.html
models/: brand_kb.py
scripts/: generate_user_guide_pdf.py  migrate_sqlite_to_postgres.py  refresh_sample_chats.py
src/: db_backend.py  db_schema.py  lambda_handler.py  main.py  prompts.py  webapp.py  webapp_schemas.py  webapp_templates.py
src/model/: load.py
storage/: kb_store.py  log_store.py
test/: test_main.py  test_webapp.py
